--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -40,15 +40,16 @@
 
     <TextView
         android:id="@+id/info_text_view"
-        style="@style/ExchangeSubTitleStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="68dp"
         android:layout_marginEnd="8dp"
         android:gravity="start"
         android:text="@string/info_login"
+        android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title_text_view" />
 
@@ -69,15 +70,15 @@
         android:id="@+id/skip_auth_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="276dp"
         android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
         android:drawableEnd="@drawable/ic_launch"
         android:drawablePadding="4dp"
         android:gravity="center"
         android:text="@string/skip_login"
         android:textColor="@color/exchange_purple"
         android:textSize="@dimen/subtitle_size"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/google_sign_in_btn" />
 
 
