--- a/app/src/main/res/layout/fragment_splash_screen.xml
+++ b/app/src/main/res/layout/fragment_splash_screen.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.splashscreen.SplashScreenFragment">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/title_text_view"
         style="@android:style/Widget.TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -18,7 +18,7 @@
         android:gravity="center"
         android:text="Real-Time Exchange Rates"
         android:textColor="@android:color/white"
-        android:textSize="28sp"
+        android:textSize="26sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +36,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/logo_image_view"
+        android:id="@+id/logo_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
