--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -47,7 +47,7 @@
         <menu>
             <group android:checkableBehavior="single">
                 <item
-                    android:id="@+id/nav_help"
+                    android:id="@+id/nav_contact"
                     android:icon="@drawable/ic_info"
                     android:title="@string/contact" />
             </group>
